--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sanity/client": "^3.3.3",
     "@sanity/desk-tool": "^2.30.4",
     "@sanity/image-url": "^1.0.1",
+    "@types/react-native": "^0.69.6",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
