--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-react": "^7.18.6",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "@sanity/client": "^3.3.3",
     "@sanity/desk-tool": "^2.30.4",
     "@sanity/image-url": "^1.0.1",
@@ -29,6 +30,7 @@
     "react-native-screens": "~3.11.1",
     "react-native-svg": "^12.4.3",
     "react-native-web": "0.17.7",
+    "react-redux": "^8.0.2",
     "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
